[gd_scene load_steps=2 format=3 uid="uid://ci3j2f2igok5a"]

[ext_resource type="Script" uid="uid://d4jgp2b8k2ra2" path="res://scenes/ui/menus/title_screen/title_screen.gd" id="1_s1dkv"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_s1dkv")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="NewGame" type="Button" parent="Menu"]
layout_mode = 2
text = "New Game"

[node name="ContinueGame" type="Button" parent="Menu"]
layout_mode = 2
text = "Continue Game"

[node name="Options" type="Button" parent="Menu"]
layout_mode = 2
text = "Options"

[node name="QuitGame" type="Button" parent="Menu"]
layout_mode = 2
text = "Quit Game"

[connection signal="pressed" from="Menu/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Menu/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/QuitGame" to="." method="_on_quit_game_pressed"]
